welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: (Int, Int, Boolean) does not take parameters
  (die1,die2,noDoubles) {
                        ^